fix: comment out visibility hidden in body styles for clarity

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -56,7 +56,7 @@ $text: black;
 
 body {
   hyphens: auto;
-  visibility: hidden; /* This hides the content */
+  /* visibility: hidden; /* This hides the content */
 }
 
 /* This class will be added by JavaScript when the language specific content is ready to be shown */
